@@ -2,6 +2,8 @@ Games to look into: DiRT, The PATH
 =Upcoming=
 * Legacy of Kain: Blood Omen 2
 * System Shock 2 - Added GoG info
+Contributed by AdmiringWorm
+* Sniper: Ghost Warrior 2
 Contributed by Arc Angel
 * DmC: Devil May Cry - Steam info
 Contributed by simtech76
